--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "delete",
     "bot"
   ],
-  "repository": "https://github.com/A",
+  "repository": "https://github.com/Vikramved/AutoDelete-V2",
   "logo": "https://telegra.ph/file/8cd549b2beef98e83349e.jpg",
   "env": {
     "BOT_TOKEN": {
